[package]
name = "den4ik_thread_pool"
version = "0.1.0"
edition = "2024"
description = "A simple thread pool implementation for the den4ik project."
license = "MIT"
repository = "https://github.com/denisstrizhkin/den4ik-rs"
readme = "../../README.md"
keywords = ["den4ik", "thread-pool", "concurrency", "parallelism"]
categories = ["concurrency"]
